Bugfix overlapping Header

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ header {
     background-repeat: no-repeat;
     background-position: 0;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
 }
 
 header nav {
